--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,12 @@
     <a href="https://www.google.com/"><img src="twiter logo.png" alt="linkedin" ></a>
     <a href="https://www.google.com/"><img src="insta.jfif" alt="linkedin" ></a>
     <a href="https://www.google.com/"><img src="facebook.jfif" alt="linkedin" ></a></div>
+
+    <div>
+        <h4>
+            Click any link above to find us
+        </h4>
+    </div>
     
 </body>
 </html>
