--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
         <h4>
             Click any link above to find us
         </h4>
+        <h5>This is a feature</h5>
     </div>
     
 </body>
