newfeature on form

--- a/form.html
+++ b/form.html
@@ -12,6 +12,8 @@
        <input type="text" placeholder= "lastname"><br>
        <input type="text" placeholder= "phonenumber"><br>
        <button>Done</button>
+
+       <h3>This is a feature from the newfeature branch</h3>
     
    </form>
 </body>
