--- a/form.html
+++ b/form.html
@@ -13,7 +13,9 @@
        <input type="text" placeholder= "phonenumber"><br>
        <button>Done</button>
 
+       <h4>This is  a master change</h4>
        <h3>This is a feature from the newfeature branch</h3>
+       <h3>This is another new feature change</h3>
     
    </form>
 </body>
